# my-rust-app

./: Cargo.toml  Dockerfile  Makefile  README.md  README_zh-CN.md  install
.github/workflows/: docker.yml  release.yml
src/: main.rs
