[package]
name = "my-rust-app"
version = "0.1.45"
edition = "2024"
authors = ["Pone Ding <poneding@gmail.com>"]
description = "My Rust application."
repository = "https://github.com/poneding/my-rust-app"
homepage = "https://github.com/poneding/my-rust-app"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["my-rust-app"]

[dependencies]
