[package]
name = "my-rust-app"
version = "0.1.50"
edition = "2024"
authors = ["Pone Ding <poneding@gmail.com>"]
description = "My Rust application."
repository = "https://github.com/poneding/my-rust-app"
homepage = "https://github.com/poneding/my-rust-app"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["my-rust-app"]

[dependencies]
ssh2-config = "0.5.4"
openssl = { version = "0.10.72", features = ["vendored"] }
